---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-08-28
  Changes:
    - Updated for Factorio v1
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020-06-19
  Changes:
    - Intial creation of mod in v18