@@ -2,6 +2,7 @@
 Version: 1.0.1
 Date: ????
   Changes:
+    - Adjusted Power Armor Ingredients to allow it to be crafted in an ASM.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2020-08-28
